xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__empty_sequence.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"()\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                EmptySequence,
                            ),
                            span: 0..2,
                        },
                    ),
                    span: 0..2,
                },
            },
        ),
        span: 0..2,
    },
)
