xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__function_definition.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"function($x) { $x + 1 }\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                ],
                body: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Variable(
                                    Name(
                                        "v0",
                                    ),
                                ),
                                span: 15..17,
                            },
                            op: Add,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 20..21,
                            },
                        },
                    ),
                    span: 15..21,
                },
            },
        ),
        span: 0..23,
    },
)
