xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__instance_of_atomic.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 instance of xs:string\")"
---
Ok(
    Spanned {
        value: InstanceOf(
            InstanceOf {
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 0..1,
                },
                sequence_type: Item(
                    Item {
                        item_type: AtomicOrUnionType(
                            Spanned {
                                value: Name {
                                    name: "string",
                                    prefix: Some(
                                        "xs",
                                    ),
                                    namespace: Some(
                                        "http://www.w3.org/2001/XMLSchema",
                                    ),
                                },
                                span: 14..23,
                            },
                        ),
                        occurrence: One,
                    },
                ),
            },
        ),
        span: 0..23,
    },
)
